Update Geico section and below

--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,17 @@ ul li{
     margin-bottom: 2em;
 }
 
+.geico-section{
+    text-align: center;
+    color: #000080;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 10px;
+}
+
 /* main{
     border-style: solid;
 } */
 
-footer{
+/* footer{
     border-style: solid;
-}
+} */
