--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,20 @@ ul li{
     margin-bottom: 2em;
 }
 
+.column-one ul li p{
+    margin-top: 0;
+    font-size: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    color: #000080;
+}
+
+.column-two ul li p{
+    margin-top: 0;
+    font-size: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    color: #000080;
+}
+
 .geico-section{
     text-align: center;
     color: #000080;
