--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ header{
     text-align: center;
     color: #000080;
     font-family: 'Times New Roman', Times, serif;
-    margin: 1em
+    margin: 16px 0;
 }
 
 .flex-container {
@@ -61,11 +61,3 @@ ul li{
     font-family: 'Times New Roman', Times, serif;
     color: #000080;
 }
-
-/* main{
-    border-style: solid;
-} */
-
-/* footer{
-    border-style: solid;
-} */
